Fix spacing and line breaks in history items
* Received items now a fixed width (not responsive)

--- a/app/assets/stylesheets/_dashboard.css.scss
+++ b/app/assets/stylesheets/_dashboard.css.scss
@@ -105,6 +105,12 @@
       width: 50px;
     }
 
+    .sub-inner {
+      float: left;
+      margin: 0 0 0 10px;
+      width: 777px;
+    }
+
     .topic {
       font-weight: bold;
       margin: 6px 0;
